{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 763,
  "lineage": "12b12ce5-161a-ca6e-ffe4-a55c6810478b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:loadbalancer/app/test-alb/16305568de0f66d5",
            "arn_suffix": "app/test-alb/16305568de0f66d5",
            "dns_name": "test-alb-666772368.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:loadbalancer/app/test-alb/16305568de0f66d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "security_groups": [
              "sg-079eda2a75b43b908"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01bb3252590d4d3f4"
              },
              {
                "subnet_id": "subnet-0cf5f2dfc5741e81e"
              }
            ],
            "subnets": [
              "subnet-01bb3252590d4d3f4",
              "subnet-0cf5f2dfc5741e81e"
            ],
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development"
            },
            "vpc_id": "vpc-0a5d3bf01361aab6b",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.vpc.aws_security_group.load_balancer_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02c2f9416bfa92759",
            "public_dns": "ec2-54-255-94-102.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.94.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "nat-gw-ip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03b19ec58e4bf67a4",
            "public_dns": "ec2-13-251-107-253.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.107.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "nat-gw-ip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:internet-gateway/igw-0f85fb8e2f6f95c18",
            "id": "igw-0f85fb8e2f6f95c18",
            "owner_id": "621567429603",
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener/app/test-alb/16305568de0f66d5/96e3ae5b562a9328",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Path not found!",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener/app/test-alb/16305568de0f66d5/96e3ae5b562a9328",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:loadbalancer/app/test-alb/16305568de0f66d5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_alb.application_load_balancer",
            "module.vpc.aws_security_group.load_balancer_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:targetgroup/user-target-group/0a165c11f618cd90",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener-rule/app/test-alb/16305568de0f66d5/96e3ae5b562a9328/58bb40bc62425064",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/user/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener-rule/app/test-alb/16305568de0f66d5/96e3ae5b562a9328/58bb40bc62425064",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener/app/test-alb/16305568de0f66d5/96e3ae5b562a9328",
            "priority": 100
          },
          "dependencies": [
            "module.alb.aws_alb.application_load_balancer",
            "module.alb.aws_lb_listener.listener",
            "module.alb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.load_balancer_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:targetgroup/user-target-group/0a165c11f618cd90",
            "arn_suffix": "targetgroup/user-target-group/0a165c11f618cd90",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,201,204,301,302,304",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:targetgroup/user-target-group/0a165c11f618cd90",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "user-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c2f9416bfa92759",
            "id": "nat-04d4977f883e8d3b5",
            "network_interface_id": "eni-083801134ecc65be5",
            "private_ip": "10.0.0.59",
            "public_ip": "54.255.94.102",
            "subnet_id": "subnet-0cf5f2dfc5741e81e",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "nat-gw-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b19ec58e4bf67a4",
            "id": "nat-0e8f19891dbc58886",
            "network_interface_id": "eni-09bf2e71d77b1ab9d",
            "private_ip": "10.0.1.24",
            "public_ip": "13.251.107.253",
            "subnet_id": "subnet-01bb3252590d4d3f4",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "nat-gw-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f85fb8e2f6f95c18",
            "id": "r-rtb-023207f3167dc62491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-023207f3167dc6249",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08c150833a81c1e40",
            "owner_id": "621567429603",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-04d4977f883e8d3b5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "private-route-ap-southeast-1a"
            },
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fb867067cb0b43e9",
            "owner_id": "621567429603",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e8f19891dbc58886",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "private-route-ap-southeast-1b"
            },
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0351105116c43626a",
            "owner_id": "621567429603",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f85fb8e2f6f95c18",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "public-route"
            },
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f2a57debd3dd165",
            "route_table_id": "rtb-0351105116c43626a",
            "subnet_id": "subnet-0cf5f2dfc5741e81e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026e705c1f253b5a0",
            "route_table_id": "rtb-0351105116c43626a",
            "subnet_id": "subnet-01bb3252590d4d3f4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0257f17129c28094a",
            "route_table_id": "rtb-08c150833a81c1e40",
            "subnet_id": "subnet-0791d6fdfb5846350"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024e5b9697e67ea9a",
            "route_table_id": "rtb-0fb867067cb0b43e9",
            "subnet_id": "subnet-097835c8274af5bbd"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:security-group/sg-09fd21ac78d6575cf",
            "description": "ECS SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fd21ac78d6575cf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-079eda2a75b43b908"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ECS_SG",
            "name_prefix": "",
            "owner_id": "621567429603",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_security_group.load_balancer_security_group",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:security-group/sg-079eda2a75b43b908",
            "description": "ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079eda2a75b43b908",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB_SG",
            "name_prefix": "",
            "owner_id": "621567429603",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:subnet/subnet-0791d6fdfb5846350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0791d6fdfb5846350",
            "map_public_ip_on_launch": false,
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:subnet/subnet-097835c8274af5bbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-097835c8274af5bbd",
            "map_public_ip_on_launch": false,
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:subnet/subnet-0cf5f2dfc5741e81e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0cf5f2dfc5741e81e",
            "map_public_ip_on_launch": false,
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:subnet/subnet-01bb3252590d4d3f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01bb3252590d4d3f4",
            "map_public_ip_on_launch": false,
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0a5d3bf01361aab6b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "messi_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:vpc/vpc-0a5d3bf01361aab6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f90c41c886a8df6",
            "default_route_table_id": "rtb-023207f3167dc6249",
            "default_security_group_id": "sg-055e6c5aef0019068",
            "dhcp_options_id": "dopt-32a94057",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a5d3bf01361aab6b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-023207f3167dc6249",
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "Messi-vpc"
            }
          }
        }
      ]
    }
  ]
}